# CodexAid

./: .env_example  .gitignore  LICENSE  README.md  config.py  main.py  note.md  pyproject.toml
agent/: __init__.py  base.py  baseagent.py  designer.py  developer.py  planner.py  prompt.py  reader.py  templates.py
config/: agent_tools.json  server_list.json
data/: chunk_split.py  deeppath.md  word.py
demo/: cli.py  services.py
doc/: Presentation.pptx  note.md
mcp/: server_list.json
mcp/manager/: mcp_client.py  mcp_manager.py
mcp/servers/: skills.py
mcp/servers/duckduck_search.py/: search_mcp.py
mcp_service/: server_list.json  tool_server.py
mcp_service/manager/: __init__.py  mcp_client.py  mcp_manager.py
mcp_service/servers/: skills.py  temp.py
mcp_service/servers/context7/: package-lock.json  package.json
mcp_service/servers/duckduck_search.py/: duckduckgo.py
scr/: chat.py  work.py
tool_service/: LICENSE  README.md  tool_caller.py  tool_server.py
tool_service/manager/: __init__.py  mcp_client.py  mcp_manager.py  test.json
tool_service/server/: example_server.py  weather.py
utils/: Milvus.bat  __init__.py  chunk_split.py  codetest.py  embedding.py  llm.py  mcpbuild.py  model_download.py  pdf.py  rag_sql.py  ragdb.py  tool_caller.py  voice.py
