[project]
name = "qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "fastapi>=0.115.12",
    "gradio-client>=1.10.0",
    "mcp>=1.6.0",
    "modelscope>=1.25.0",
    "openai>=1.76.2",
    "pymysql>=1.0.2",
]
